--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SmartCargo Advisory | MAY ROGA LLC</title>
 <style>
-    body { background: #000b1a; font-family: 'Arial', sans-serif; padding:10px; margin:0; }
+    body { background: #000b1a; font-family: sans-serif; padding:10px; margin:0; }
     .card { max-width: 500px; margin:auto; background:white; border-radius:20px; padding:20px; border-top:10px solid #d4af37; box-shadow:0 10px 30px rgba(0,0,0,0.5); }
-    .legal-banner { background:#ff4d4f; color:white; padding:10px; font-size:11px; text-align:center; font-weight:bold; border-radius:10px; margin-bottom:15px; border:2px solid #000; text-transform:uppercase; }
-    h2 { text-align:center; margin:0; color:#001d3d; font-size:24px; letter-spacing: -1px; }
+    .legal-banner { background:#ff4d4f; color:white; padding:10px; font-size:11px; text-align:center; font-weight:bold; border-radius:10px; margin-bottom:15px; }
+    h2 { text-align:center; margin:0; color:#001d3d; font-size:24px; }
     h3 { text-align:center; margin:5px 0; font-size:12px; color:#d4af37; font-weight: bold; }
     .btn-main { width:100%; padding:14px; border:none; border-radius:10px; cursor:pointer; font-weight:bold; margin-top:5px; text-transform:uppercase; }
     .photo-box { width:100%; height:110px; background:#0b1e33; border-radius:12px; display:flex; align-items:center; justify-content:center; cursor:pointer; border:1px solid #d4af37; margin-top:5px; overflow:hidden; }
@@ -23,21 +23,21 @@
 <body>
 <div class="card">
     <select id="userLang" onchange="changeLang(this.value)" style="width:100%; font-weight:bold; border:2px solid #001d3d; margin-bottom:10px; padding:12px; border-radius:8px;">
-        <option value="en">🇺🇸 ENGLISH (Expert)</option>
-        <option value="es">🇪🇸 ESPAÑOL (Experto)</option>
+        <option value="en">🇺🇸 ENGLISH SYSTEM</option>
+        <option value="es">🇪🇸 SISTEMA ESPAÑOL</option>
     </select>
 
     <div class="legal-banner" id="txt-legal">PRIVATE ADVISORY. NOT GOVERNMENT.</div>
 
     <h2>SmartCargo ADVISORY</h2>
-    <h3>STRATEGIC INTELLIGENCE BY MAY ROGA LLC</h3>
+    <h3>BY MAY ROGA LLC</h3>
 
     <div id="accessSection">
         <div class="grid">
-            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(5)">Courier $5</button>
-            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(15)">Standard $15</button>
-            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(35)">Critical $35</button>
-            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(95)">Project $95</button>
+            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(5)">$5</button>
+            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(15)">$15</button>
+            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(35)">$35</button>
+            <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="pay(95)">$95</button>
         </div>
         <input type="text" id="awb" placeholder="REF # / AWB / B/L" style="margin-top:5px;">
         <div style="display:flex; gap:5px; margin-top:5px;">
@@ -49,34 +49,34 @@
 
     <div id="mainApp" style="display:none;">
         <div class="grid">
-            <div class="role-btn" onclick="selRole('Shipper',this)">Shipper / Exporter</div>
-            <div class="role-btn" onclick="selRole('Forwarder',this)">Forwarder / Agent</div>
-            <div class="role-btn" onclick="selRole('Trucker',this)">Trucker / Carrier</div>
-            <div class="role-btn" onclick="selRole('Operator',this)">Warehouse / Ops</div>
+            <div class="role-btn" onclick="selRole('Driver',this)">Chofer / Trucker</div>
+            <div class="role-btn" onclick="selRole('Agent',this)">Agente / Forwarder</div>
+            <div class="role-btn" onclick="selRole('Warehouse',this)">Bodega / Ops</div>
+            <div class="role-btn" onclick="selRole('Manager',this)">Gerente / Owner</div>
         </div>
 
         <div class="grid">
             <div class="photo-box" onclick="document.getElementById('f1').click()">
-                <img id="v1"><span id="txt-capture1" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 VIEW DOC / PHOTO 1</span>
+                <img id="v1"><span id="txt-capture1" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 DOC / PHOTO 1</span>
                 <input type="file" id="f1" accept="image/*" style="display:none;" onchange="scRead(event,1)">
             </div>
             <div class="photo-box" onclick="document.getElementById('f2').click()">
-                <img id="v2"><span id="txt-capture2" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 VIEW DOC / PHOTO 2</span>
+                <img id="v2"><span id="txt-capture2" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 DOC / PHOTO 2</span>
                 <input type="file" id="f2" accept="image/*" style="display:none;" onchange="scRead(event,2)">
             </div>
             <div class="photo-box" onclick="document.getElementById('f3').click()">
-                <img id="v3"><span id="txt-capture3" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 VIEW DOC / PHOTO 3</span>
+                <img id="v3"><span id="txt-capture3" style="color:#d4af37; font-size:11px; font-weight:bold;">📷 DOC / PHOTO 3</span>
                 <input type="file" id="f3" accept="image/*" style="display:none;" onchange="scRead(event,3)">
             </div>
         </div>
 
         <div style="position:relative; margin-top:10px;">
-            <textarea id="prompt" style="height:120px; resize:none;" placeholder="How can we help?"></textarea>
+            <textarea id="prompt" style="height:120px; resize:none;" placeholder="¿Qué necesitas solucionar?"></textarea>
             <button onclick="activarVoz()" style="position:absolute; right:55px; bottom:12px; border:none; background:white; font-size:24px;">🎤</button>
             <button onclick="escuchar()" style="position:absolute; right:12px; bottom:12px; border:none; background:#d4af37; border-radius:50%; width:44px; height:44px; color:white; font-size:20px;">🔊</button>
         </div>
 
-        <button id="btn-get" class="btn-main" style="background:#1b5e20; color:white; font-size:18px; border:1px solid #000;" onclick="preRun()">GET SOLUTION</button>
+        <button id="btn-get" class="btn-main" style="background:#1b5e20; color:white; font-size:18px;" onclick="preRun()">GET SOLUTION YA</button>
         <div id="res"></div>
 
         <div class="grid" style="margin-top:15px;">
