--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="grid" style="margin-top:15px;">
             <button class="btn-main" style="background:#25D366;color:white;font-size:10px;" onclick="ws()">WhatsApp</button>
             <button class="btn-main" style="background:#0056b3;color:white;font-size:10px;" onclick="copy()">Copy</button>
-            <button id="btn-clear" class="btn-main" style="background:#a8071a;color:white;font-size:10px;" onclick="limpiar()">NEW CONSULTATION</button>
+            <button id="btn-clear" class="btn-main" style="background:#a8071a;color:white;font-size:10px;" onclick="limpiar()">NEW SESSION</button>
         </div>
     </div>
 </div>
