--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SmartCargo Advisory | MAY ROGA LLC</title>
+<title>SMARTCARGO ADVISORY by MAY ROGA LLC</title>
 
 <style>
     body { background: #000b1a; font-family: sans-serif; padding:10px; margin:0; overflow-x:hidden; }
@@ -18,7 +18,7 @@
         background:#111;
         color:#d4af37;
         padding:10px;
-        font-size:9px;
+        font-size:10px;
         text-align:center;
         font-weight:bold;
         border:1px solid #d4af37;
@@ -113,8 +113,8 @@
 
 <div class="card">
 
-    <div class="promo-gold"><span>360° STRATEGIC SOLUTIONS BY MAY ROGA LLC - PRIVATE LOGISTICS ADVISORY LEADERS - SMARTCARGO ADVISORY</span></div>
-    <div class="promo-blue"><span>MITIGATING HOLDS, RETURNS, SAVING MONEY, WE THINK AND WORK ON YOUR CARGO</span></div>
+    <div class="promo-gold"><span>360° STRATEGIC LOGISTICS SOLUTIONS - SMARTCARGO ADVISORY BY MAY ROGA LLC</span></div>
+    <div class="promo-blue"><span>MITIGATING HOLDS, RETURNS, SAVING MONEY. WE THINK AND WORK ON YOUR CARGO.</span></div>
 
     <select id="userLang" onchange="changeLang(this.value)"
         style="width:100%; font-weight:bold; border:2px solid #001d3d; margin-bottom:10px; padding:12px; border-radius:8px;">
@@ -123,10 +123,10 @@
     </select>
 
     <div class="legal-banner" id="txt-legal">
-        INDEPENDENT PRIVATE ADVISORY. NOT IATA, DOT, TSA, OR CBP. ALL RESPONSES ARE STRATEGIC SUGGESTIONS.
+        SMARTCARGO ADVISORY by May Roga LLC | INDEPENDENT PRIVATE ADVISORY. NOT IATA, DOT, TSA, OR CBP. ALL RESPONSES ARE STRATEGIC SUGGESTIONS ONLY.
     </div>
 
-    <h2>SmartCargo ADVISORY</h2>
+    <h2>SMARTCARGO ADVISORY</h2>
     <h3>BY MAY ROGA LLC</h3>
 
     <div id="accessSection">
